# gomoku

./: CMakeLists.txt  GomokuWindow.ui  Makefile  SFMLCanvas.hpp  analysis.txt  bug3.txt  bug4.txt  gmon.out  gomoku  gomoku.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_GomokuWindow.cpp  patterns  qsfmlcanvas.cpp  test.txt  ui_GomokuWindow.h
Game/: Game.cpp  Game.hpp  Makefile  Player.cpp  gomoku  main.cpp
cmake_modules/: FindSFML.cmake
doc/: doc.txt
includes/: ASFMLCanvas.hpp  Game.hpp  GomokuWindow.hpp  MinMax.hh  Pattern.hpp  Player.hpp  SFMLCanvas.hh  SFMLCanvas.hpp
src/: ASFMLCanvas.cpp  Game.cpp  GomokuWindow.cpp  MinMax.cpp  MinMax2.cpp  Pattern.cpp  Player.cpp  main.cpp  sfmlcanvas.cpp
